--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -36,7 +36,6 @@
   },
   "scripts": {
     "start": "ts-node src/index.ts",
-    "start:dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
+    "start:dev": "ts-node-dev --respawn --transpile-only src/index.ts"
   }
 }
