--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -18,7 +18,6 @@
     "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.11",
-    "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.2",
     "@types/nodemailer": "^6.4.0",
     "axios": "^0.21.1",
@@ -28,14 +27,12 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "joi": "^17.4.0",
-    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.18"
   },
   "scripts": {
     "start": "ts-node src/index.ts",
-    "start:dev": "ts-node-dev --respawn --transpile-only src/index.ts"
+    "start:dev": "cross-env NODE_PATH=./src ts-node-dev --respawn --transpile-only src/index.ts"
   }
 }
