--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -7,6 +7,7 @@
     "@emotion/babel-preset-css-prop": "^11.2.0",
     "@emotion/react": "^11.7.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
+    "@react-hook/merged-ref": "^1.3.2",
     "@svgr/webpack": "^6.1.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -64,6 +65,7 @@
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
     "typescript": "^4.5.4",
+    "use-onclickoutside": "^0.4.0",
     "web-vitals": "^2.1.2",
     "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0",
