--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -30,7 +30,8 @@
     "express": "^4.17.1",
     "mongoose": "^6.1.4",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.4.18"
+    "nodemailer": "^6.4.18",
+    "validator": "^13.7.0"
   },
   "scripts": {
     "start": "ts-node src/index.ts",
