--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -6,6 +6,8 @@
     "@babel/core": "^7.16.0",
     "@emotion/babel-preset-css-prop": "^11.2.0",
     "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.2.8",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@react-hook/merged-ref": "^1.3.2",
     "@svgr/webpack": "^6.1.2",
