--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -44,6 +44,7 @@
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
+    "joi": "^17.5.0",
     "mini-css-extract-plugin": "^2.4.5",
     "moment": "^2.29.1",
     "postcss": "^8.4.4",
