--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -28,6 +28,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.18",
