--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^6.1.4",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.2",
+    "react-cookie": "^4.1.1",
     "validator": "^13.7.0"
   },
   "scripts": {
