--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -20,6 +20,7 @@
     "@types/express": "^4.17.11",
     "@types/morgan": "^1.9.2",
     "@types/nodemailer": "^6.4.0",
+    "@types/validator": "^13.7.1",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "compression": "^1.7.4",
