--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -8,7 +8,9 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.0",
+    "@mui/lab": "^5.0.0-alpha.67",
     "@mui/material": "^5.2.8",
+    "date-fns": "latest",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@react-hook/merged-ref": "^1.3.2",
     "@svgr/webpack": "^6.1.2",
