--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -19,6 +19,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.11",
     "@types/morgan": "^1.9.2",
+    "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.0",
     "@types/validator": "^13.7.1",
     "axios": "^0.21.1",
@@ -34,6 +35,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "nodemailer": "^6.7.2",
     "react-cookie": "^4.1.1",
     "validator": "^13.7.0"
