--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -10,7 +10,6 @@
     "@mui/icons-material": "^5.3.0",
     "@mui/lab": "^5.0.0-alpha.67",
     "@mui/material": "^5.2.8",
-    "date-fns": "latest",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@react-hook/merged-ref": "^1.3.2",
     "@svgr/webpack": "^6.1.2",
@@ -33,6 +32,7 @@
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
+    "date-fns": "latest",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
     "eslint": "^8.3.0",
@@ -59,6 +59,7 @@
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.2.1",
     "recoil": "^0.5.2",
