--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -21,6 +21,7 @@
     "@types/morgan": "^1.9.2",
     "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.0",
+    "@types/shortid": "^0.0.29",
     "@types/validator": "^13.7.1",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
@@ -38,6 +39,7 @@
     "multer": "^1.4.4",
     "nodemailer": "^6.7.2",
     "react-cookie": "^4.1.1",
+    "shortid": "^2.2.16",
     "validator": "^13.7.0"
   },
   "scripts": {
