--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -7,6 +7,12 @@
     "@emotion/babel-preset-css-prop": "^11.2.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@fullcalendar/core": "^5.10.1",
+    "@fullcalendar/daygrid": "^5.10.1",
+    "@fullcalendar/interaction": "^5.10.1",
+    "@fullcalendar/list": "^5.10.1",
+    "@fullcalendar/react": "^5.10.1",
+    "@fullcalendar/timegrid": "^5.10.1",
     "@mui/icons-material": "^5.3.0",
     "@mui/lab": "^5.0.0-alpha.67",
     "@mui/material": "^5.2.8",
@@ -60,6 +66,7 @@
     "react-dev-utils": "^12.0.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-query": "^3.34.15",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.2.1",
     "recoil": "^0.5.2",
