--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/cors": "^2.8.12",
-    "@types/node": "^14.14.28",
+    "@types/node": "^16.11.7",
     "@types/passport": "^1.0.6",
     "@types/passport-jwt": "^3.0.5",
     "ts-node": "^9.1.1",
@@ -44,6 +44,7 @@
     "validator": "^13.7.0"
   },
   "scripts": {
+    "build": "tsc",
     "start": "ts-node src/index.ts",
     "start:dev": "cross-env NODE_PATH=./src ts-node-dev --respawn --transpile-only src/index.ts"
   }
