--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -11,6 +11,7 @@
     "@types/passport-jwt": "^3.0.5",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1",
+    "tsconfig-paths": "^3.12.0",
     "typescript": "^4.1.5"
   },
   "dependencies": {
@@ -44,8 +45,9 @@
     "validator": "^13.7.0"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -p tsconfig.json",
     "start": "ts-node src/index.ts",
-    "start:dev": "cross-env NODE_PATH=./src ts-node-dev --respawn --transpile-only src/index.ts"
+    "start:dev": "cross-env NODE_PATH=./src ts-node-dev --respawn --transpile-only src/index.ts",
+    "start:prod": "node -r ts-node/register/transpile-only -r tsconfig-paths/register build/index.js"
   }
 }
