--- a/BackEnd/tsconfig.json
+++ b/BackEnd/tsconfig.json
@@ -15,6 +15,16 @@
     "sourceMap": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "baseUrl": "src",
-  }
+    "baseUrl": ".",
+    "paths": {
+      "*": [
+        "src/*",
+        "*"
+      ]
+    }
+  },
+  "exclude": [
+    "node_modules",
+    "build"
+  ]
 }
