--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -10,7 +10,7 @@
     "@types/passport": "^1.0.6",
     "@types/passport-jwt": "^3.0.5",
     "ts-node-dev": "^1.1.1",
-    "tsconfig-paths": "^3.12.0",
+    "tsconfig-paths": "^3.12.0"
   },
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
