--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -23,7 +23,7 @@
     "@types/nodemailer": "^6.4.0",
     "@types/shortid": "^0.0.29",
     "@types/validator": "^13.7.1",
-	"typescript": "^4.1.5"
+	"typescript": "^4.1.5",
 	"ts-node": "^9.1.1",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
