--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -47,7 +47,7 @@
   },
   "scripts": {
 	"start": "node -r ts-node/register/transpile-only -r tsconfig-paths/register build/index.js",
-    "postinstall": "tsc -p tsconfig.json",
+    "postinstall": "rm ./node_modules/mongoose/index.d.ts && tsc -p tsconfig.json",
     "watch-ts": "tsc -w",
     "deploy": "git add . && git commit -m Heroku && git subtree push --prefix server heroku master"
   }
