--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "author": "heechan",
   "license": "MIT",
-  "engines": { "node": "16.14.0" },
+  "engines": {
+    "node": "16.14.0"
+  },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/passport": "^1.0.6",
@@ -14,17 +16,15 @@
   },
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
-	"@types/node": "^16.11.7",
     "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.11",
     "@types/morgan": "^1.9.2",
     "@types/multer": "^1.4.7",
+    "@types/node": "^16.11.7",
     "@types/nodemailer": "^6.4.0",
     "@types/shortid": "^0.0.29",
     "@types/validator": "^13.7.1",
-	"typescript": "^4.1.5",
-	"ts-node": "^9.1.1",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "compression": "^1.7.4",
@@ -37,17 +37,20 @@
     "express-validator": "^6.14.0",
     "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.4.0",
     "mongoose": "^6.1.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.2",
     "react-cookie": "^4.1.1",
     "shortid": "^2.2.16",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.5",
     "validator": "^13.7.0"
   },
   "scripts": {
-	"start": "node -r ts-node/register/transpile-only -r tsconfig-paths/register build/index.js",
-    "postinstall": "rm ./node_modules/mongoose/index.d.ts && tsc -p tsconfig.json",
+    "start": "node -r ts-node/register/transpile-only -r tsconfig-paths/register build/index.js",
+    "postinstall": "tsc -p tsconfig.json",
     "watch-ts": "tsc -w",
     "deploy": "git add . && git commit -m Heroku && git subtree push --prefix server heroku master"
   }
