--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -50,7 +50,7 @@
   },
   "scripts": {
     "start": "node -r ts-node/register/transpile-only -r tsconfig-paths/register build/index.js",
-    "postinstall": "tsc -p tsconfig.json",
+    "postinstall": "npm i @types/node@16.11.7 --save-dev && tsc -p tsconfig.json",
     "watch-ts": "tsc -w",
     "deploy": "git add . && git commit -m Heroku && git subtree push --prefix server heroku master"
   }
