--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -87,7 +87,7 @@
     "workbox-webpack-plugin": "^6.4.1"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "export PORT=${PORT} node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
