--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -13,6 +13,7 @@
     "@fullcalendar/list": "^5.10.1",
     "@fullcalendar/react": "^5.10.1",
     "@fullcalendar/timegrid": "^5.10.1",
+    "@loadable/component": "^5.15.2",
     "@mui/icons-material": "^5.3.0",
     "@mui/lab": "^5.0.0-alpha.67",
     "@mui/material": "^5.2.8",
@@ -23,6 +24,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.0.3",
+    "@types/loadable__component": "^5.13.4",
     "@types/node": "^16.11.17",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
@@ -171,6 +173,5 @@
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.7.2"
-  },
-  "proxy": "http://localhost:4000"
+  }
 }
