--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -23,6 +23,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/gravatar": "^1.8.3",
     "@types/jest": "^27.0.3",
     "@types/loadable__component": "^5.13.4",
     "@types/node": "^16.11.17",
@@ -48,6 +49,7 @@
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
+    "gravatar": "^1.8.2",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "immer": "^9.0.7",
