--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -4,15 +4,15 @@
   "main": "index.js",
   "author": "heechan",
   "license": "MIT",
+  "engines": {
+    "node": "16.x"
+  },
   "devDependencies": {
     "@types/cors": "^2.8.12",
-    "@types/node": "^16.11.7",
     "@types/passport": "^1.0.6",
     "@types/passport-jwt": "^3.0.5",
-    "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1",
-    "tsconfig-paths": "^3.12.0",
-    "typescript": "^4.1.5"
+    "tsconfig-paths": "^3.12.0"
   },
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
@@ -21,6 +21,7 @@
     "@types/express": "^4.17.11",
     "@types/morgan": "^1.9.2",
     "@types/multer": "^1.4.7",
+    "@types/node": "^16.11.7",
     "@types/nodemailer": "^6.4.0",
     "@types/shortid": "^0.0.29",
     "@types/validator": "^13.7.1",
@@ -42,12 +43,14 @@
     "nodemailer": "^6.7.2",
     "react-cookie": "^4.1.1",
     "shortid": "^2.2.16",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.5",
     "validator": "^13.7.0"
   },
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "start": "ts-node src/index.ts",
-    "start:dev": "cross-env NODE_PATH=./src ts-node-dev --respawn --transpile-only src/index.ts",
-    "start:prod": "node -r ts-node/register/transpile-only -r tsconfig-paths/register build/index.js"
+    "start": "node -r ts-node/register/transpile-only -r tsconfig-paths/register build/index.js",
+    "postinstall": "tsc -p tsconfig.json",
+    "watch-ts": "tsc -w",
+    "start:dev": "cross-env NODE_PATH=./src ts-node-dev --respawn --transpile-only src/index.ts"
   }
 }
