--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -73,6 +73,7 @@
     "react-query": "^3.34.15",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.2.1",
+    "react-toastify": "^8.2.0",
     "recoil": "^0.5.2",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
