--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -175,6 +175,7 @@
     ]
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "^11.7.2"
+    "@emotion/babel-plugin": "^11.7.2",
+    "@types/lodash": "^4.14.181"
   }
 }
