--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -65,6 +65,7 @@
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.0.1",
     "prompts": "^2.4.2",
+    "quill": "^1.3.7",
     "react": "^17.0.2",
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.0",
@@ -176,6 +177,7 @@
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.7.2",
-    "@types/lodash": "^4.14.181"
+    "@types/lodash": "^4.14.181",
+    "@types/quill": "^2.0.9"
   }
 }
