--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -35,6 +35,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.14.0",
+    "fuse.js": "^6.5.3",
     "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4",
