--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -23,6 +23,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^16.11.7",
     "@types/nodemailer": "^6.4.0",
+    "@types/sharp": "^0.30.2",
     "@types/shortid": "^0.0.29",
     "@types/validator": "^13.7.1",
     "axios": "^0.21.1",
@@ -35,6 +36,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.14.0",
+    "fs": "^0.0.1-security",
     "fuse.js": "^6.5.3",
     "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
@@ -43,6 +45,7 @@
     "multer": "^1.4.4",
     "nodemailer": "^6.7.2",
     "react-cookie": "^4.1.1",
+    "sharp": "^0.30.4",
     "shortid": "^2.2.16",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5",
