--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -27,6 +27,7 @@
     "@types/jest": "^27.0.3",
     "@types/loadable__component": "^5.13.4",
     "@types/node": "^16.11.17",
+    "@types/randomcolor": "^0.5.6",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.2",
@@ -53,12 +54,14 @@
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "immer": "^9.0.7",
+    "install": "^0.13.0",
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
     "joi": "^17.5.0",
     "mini-css-extract-plugin": "^2.4.5",
     "moment": "^2.29.1",
+    "npm": "^8.8.0",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.1",
@@ -66,6 +69,7 @@
     "postcss-preset-env": "^7.0.1",
     "prompts": "^2.4.2",
     "quill": "^1.3.7",
+    "randomcolor": "^0.6.2",
     "react": "^17.0.2",
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.0",
