--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -75,6 +75,7 @@
     "react-dev-utils": "^12.0.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-intersection-observer": "^9.1.0",
     "react-query": "^3.34.15",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.2.1",
