--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.3.0",
     "@mui/lab": "^5.0.0-alpha.67",
     "@mui/material": "^5.2.8",
+    "@mui/styles": "^5.6.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@react-hook/merged-ref": "^1.3.2",
     "@svgr/webpack": "^6.1.2",
@@ -79,6 +80,7 @@
     "react-query": "^3.34.15",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.2.1",
+    "react-spring": "^9.4.4",
     "react-toastify": "^8.2.0",
     "recoil": "^0.5.2",
     "resolve": "^1.20.0",
