--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -31,6 +31,7 @@
     "@types/randomcolor": "^0.5.6",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/react-phone-number-input": "^3.0.13",
     "@types/react-router-dom": "^5.3.2",
     "axios": "^0.24.0",
     "babel-jest": "^27.4.2",
@@ -77,6 +78,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^9.1.0",
+    "react-phone-number-input": "^3.1.52",
     "react-query": "^3.34.15",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.2.1",
