--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -79,6 +79,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^9.1.0",
+    "react-markdown": "^8.0.3",
     "react-phone-number-input": "^3.1.52",
     "react-query": "^3.34.15",
     "react-refresh": "^0.11.0",
