--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -73,6 +73,7 @@
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.0",
     "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.3.0",
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^9.1.0",
     "react-markdown": "^8.0.3",
